# fritanga

./: Gemfile  IDEAS.md  README.md  Rakefile  fritanga.gemspec  launch.sh  tasks.sh
benchmarks/: ams.rb  bm_support.rb  fritanga.rb  setup.rb
ext/fritanga/: Cargo.toml  extconf.rb  extconf_bare.rb
ext/fritanga/src/: lib.rs
ext/rust_reverse/: Cargo.toml
ext/rust_reverse/src/: lib.rs
lib/: fritanga.rb
lib/fritanga/: array_serializer.rb  serializer.rb
spec/: models.rb  spec_helper.rb
spec/fritanga/: serializer_spec.rb
test/: test_helper.rb
